# lore-book

./: .gitignore  CHANGELOG.md  CHRONICLE.md  LICENSE  README.md  SECURITY.md  TAP_SETUP.md  lore.rb  mkdocs.yml  pyproject.toml  smoke.sh
.github/workflows/: codeql.yml  docs.yml  publish.yml  release.yml  sync-scoop-bucket.yml  windows-smoke.yml
Formula/: lore.rb
docs/: cli.md  concepts.md  faq.md  index.html  index.md  install.md
docs/assets/javascripts/: homebrew-legacy.js  sparkles.js
docs/assets/stylesheets/: homebrew-legacy.css
docs/cli/: index.html
docs/concepts/: index.html
docs/faq/: index.html
docs/install/: index.html
packaging/scoop/: lore-book.json
packaging/winget/: submission-1.3.0.md  submission-1.3.1.md  submission-1.4.0.md  submission-1.4.1.md  submission-1.4.2.md  submission-1.4.3.md  submission-1.4.4.md  submission-1.4.5.md  submission-1.4.6.md  submission-1.4.7.md  submission-1.4.8.md  submission-1.5.0.md  submission-1.5.1.md
scripts/: install_windows.ps1  prepare_release.py  prepare_windows_packaging.py
site/: 404.html  demo.html  index.html  sitemap.xml
site/assets/javascripts/: homebrew-legacy.js
site/assets/stylesheets/: enchanted.css  homebrew-legacy.css
site/cli/: index.html
site/concepts/: index.html
site/faq/: index.html
site/install/: index.html
site/search/: search_index.json
src/lore/: __init__.py  associations.py  chronicle.py  cli.py  config.py  daemon.py  export.py  extract.py  harmonize.py  relics.py  search.py  store.py  trust.py  tui.py
tests/: test_associations.py  test_chronicle.py  test_cli.py  test_harmonize.py
